--- a/src/main/resources/templates/myprofile.html
+++ b/src/main/resources/templates/myprofile.html
@@ -20,6 +20,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/myProfile.css}">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
@@ -32,7 +33,10 @@
         <a class="icon" th:href="@{/home}"><img alt="" src="/img/WR-icon.png"></a>
 
         <div class="content">
-
+            <div class="unreadContent">
+                <p th:each="message : ${unreadMessages}" th:onclick="goToUser([[${message.id}]])">New message
+                    from:[[${message.name}]]</p>
+            </div>
         </div>
 
     </div>
@@ -70,7 +74,7 @@
             <th>START</th>
             <th>END</th>
             <th>BUSINESS</th>
-
+            <th>Delete</th>
         </tr>
         </thead>
         <tbody>
@@ -80,6 +84,11 @@
                 <td>[[${reservation.startTime}]]</td>
                 <td>[[${reservation.endTime}]]</td>
                 <td><span th:each="business :${reservation.business}"> [[${business.name}]]</span>
+                </td>
+                <td>
+                    <button class="btn btn-danger" th:onclick="deleteReservation([[${reservation.id}]])" type="button">
+                        Delete Reservation
+                    </button>
                 </td>
             </tr>
         </th:block>
@@ -107,6 +116,7 @@
 
 
 <script th:src="@{/js/edit.js}"></script>
+<script th:src="@{/js/goToUser.js}"></script>
 <script th:src="@{/js/registration.js}"></script>
 <script th:src="@{/js/usereditsave.js}"></script>
 <script crossorigin="anonymous"
