--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -122,7 +122,6 @@
     width: 100%;
     height: 100%;
     top:0;
-    display: none;
     justify-content: center;
     align-items: center;
 }
@@ -208,14 +207,14 @@ width:150px;
 }
 
 #edit .modal-content-reg{
-    top:230px;
-    width: 500px;
-    height: 800px;
+    width: 70%;
     background-color: white;
     border-radius: 4px;
     text-align: center;
     padding: 20px;
     position: relative;
+    margin: auto;
+    margin-top: 4%;
 
 }
 
@@ -231,4 +230,42 @@ width:150px;
     margin: 20px auto;
 }
 
+#searchButton{
+    width: 7rem;
+    height: 2.5rem;
+    background-color: #598392;
+    border-radius: 5px;
+    border: 1px solid;
+    color: white;
+}
 
+.searchForm{
+    margin: 0.5% 0.5%;
+}
+
+.editContent{
+    display: flex;
+    justify-content: space-around;
+}
+
+.editSection{
+    display:none;
+    top: 0;
+    position: absolute;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+}
+
+.greyBox{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: rgba(89,131,146,0.4);
+}
+
+.exitX{
+    text-align: right;
+    margin-right: 2%;
+    font-size: 2rem;
+}
