--- a/src/main/resources/static/css/myProfile.css
+++ b/src/main/resources/static/css/myProfile.css
@@ -11,3 +11,12 @@
 .unreadContent p:hover {
     cursor: pointer;
 }
+
+.submitBtn{
+    width: 12rem;
+    height: 2.5rem;
+    background-color: #598392;
+    border-radius: 5px;
+    border: 1px solid;
+    color: white;
+}
